# a2a-in-action

./: .gitignore  README.md  note.txt  pyproject.toml
agents/crewai_zh/: 01_CrewAI_Simple_Sample.py  02_CrewAI_Agent.py  03_Test_CrewAI_Agent.py  README.md  README_单机版.md  __main__.py  agent.py  pyproject.toml  task_manager.py
agents/langgraph_zh/: 01_LangGraph_Simple.py  02_LangGraph_Currency-v1-直接调用.py  02_LangGraph_Currency-v2-意图识别.py  02_LangGraph_Currency-v3-智能回复.py  README.md  README_Simple.md  __main__.py  agent.py  pyproject.toml  task_manager.py  test_simple_agent.py  test_v3_smart_response.py
agents/llama_index_file_chat_zh/: 01_LlamaIndex_Simple.py  01_LlamaIndex_workflow.py  README.md  README_Simple.md  __main__.py  agent.py  pyproject.toml  sample_ai_doc.txt  task_manager.py  test_simple_agent.py
demo/ui/: README.md  pyproject.toml
mcp+a2a/: README.md  a2a_agent.py  mcp_a2a.ipynb  mcp_server.py  pyproject.toml  requirements.txt
